@@ -42,6 +42,8 @@ S3method(print,termco_nested)
 S3method(print,termco_unnested)
 S3method(print,token_count)
 S3method(print,validate_model)
+S3method(set_meta_tags,data.frame)
+S3method(set_meta_tags,list)
 S3method(split_data,data.frame)
 S3method(split_data,default)
 S3method(summary,hierarchical_coverage_regex)
@@ -103,6 +105,7 @@ export(rename_tags)
 export(search_term)
 export(search_term_collocations)
 export(search_term_which)
+export(set_meta_tags)
 export(source_term_list)
 export(split_data)
 export(tag_co_occurrence)
